# stalker-gaits

./: CMakeLists.txt  formulations.h  gallop.cpp  idle.cpp  main.cpp  model.cpp  model.h  trot.cpp  trot_turn.cpp  turn.cpp
blender/: model-gallop.fbx  model-idle.fbx  model-turn-left.fbx  model-turn-right.fbx  model-walk.fbx  model.fbx
render/: 0000-0083.mkv
results/: gallop.csv  idle.csv  walk.csv
